[project]
name = "rebrickable-dl"
version = "0.1.0"
description = ""
authors = [{ name = "qwrwed", email = "2429893+qwrwed@users.noreply.github.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "pydantic-yaml>=1.4.0,<2",
    "pydantic>=2.10.3,<3",
    "beautifulsoup4>=4.12.3,<5",
    "requests>=2.32.3,<3",
    "tqdm>=4.67.1,<5",
    "browser-cookie3>=0.19.1,<0.20",
    "utils-python @ git+https://github.com/qwrwed/utils-python.git",
    "pillow>=11.3.0,<12",
    "cloudscraper>=1.2.71,<2",
    "lxml>=6.0.2",
    "validators>=0.35.0",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "ruff>=0.14.10",
    "types-tqdm>=4.67.0.20250809",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
rbdl = "rebrickable_dl.__main__:main"
lint = "scripts.lint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "PL"]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]

[[tool.mypy.overrides]]
module = "browser_cookie3"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudscraper"
ignore_missing_imports = true
